Allow only single config
